syntax = "proto3";

package jaco.example.car;

import "car.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";

option java_package = "com.jaco.example.car";
option java_multiple_files = true;

service CarService {
  rpc GetCar(GetCarRequest) returns (Car);

  rpc CreateCar(Car) returns (Car);
  rpc ListCars(ListCarsRequest) returns (ListCarsResponse);

  // More advanced example of AIP compliant operations
  // https://google.aip.dev/general
  rpc UpdateCar(UpdateCarRequest) returns (Car) {
    option (google.api.http) = {
      patch: "/v1/{car.name=cars/*}"
      body: "car"
    };
    option (google.api.method_signature) = "car,update_mask";
  };

  //... other operations
}


message GetCarRequest {
  // Car resource name
  // Template: cars/{car_id}
  string name = 1;
}

message ListCarsRequest {
  string order_by = 1;
  string filter = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message ListCarsResponse {
  repeated Car cars = 1;
  string next_page_token = 2;
}

message UpdateCarRequest {
  Car car = 1;

  // Optional field to update only selected fields
  google.protobuf.FieldMask update_mask = 2;
}